# disasm

./: .gitignore  CMakeLists.txt  README.md  README.txt
data/: bindump  csv.py  secopcd.csv  x86.csv  x86.xml
src/: exec.cpp  exec.h  main.cpp
src/arch/: arch.cpp  arch.h
src/arch/x86/: csv.cpp  csv.h  decode.cpp  decode.h  instruction.cpp  instruction.h  reference.cpp  reference.h  translate.cpp  translate.h  x86.cpp  x86.h
src/format/: elf.cpp  elf.h  format.cpp  format.h  pe.cpp  pe.h
src/util/: common.cpp  common.h  safebool.cpp  safebool.h  util.cpp  util.h
tests/: CMakeLists.txt  common-test.h  elf-test.cpp  main.cpp  x86-test.cpp
tests/data/: x86_iset.csv
